crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@261.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT dup(22, array[44::bigint]);"
---
SelectStmt@0..34
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..31
    FuncCall@7..31
      Ident@7..10 "dup"
      Ascii40@10..11 "("
      AConst@11..13
        Iconst@11..13 "22"
      Ascii44@13..14 ","
      Whitespace@14..15 " "
      AArrayExpr@15..31
        Array@15..20 "array"
        Ascii91@20..21 "["
        TypeCast@21..31
          AConst@21..23
            Iconst@21..23 "44"
          Typecast@23..25 "::"
          TypeName@25..31
            Bigint@25..31 "bigint"
  Ascii93@31..32 "]"
  Ascii41@32..33 ")"
  Ascii59@33..34 ";"

