crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@265.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT dup(int4range(4,7));"
---
SelectStmt@0..27
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..24
    FuncCall@7..24
      Ident@7..10 "dup"
      Ascii40@10..11 "("
      FuncCall@11..24
        Ident@11..20 "int4range"
        Ascii40@20..21 "("
        AConst@21..22
          Iconst@21..22 "4"
        Ascii44@22..23 ","
        AConst@23..24
          Iconst@23..24 "7"
  Ascii41@24..25 ")"
  Ascii41@25..26 ")"
  Ascii59@26..27 ";"

