crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@266.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT dup(numrange(4,7));"
---
SelectStmt@0..26
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..23
    FuncCall@7..23
      Ident@7..10 "dup"
      Ascii40@10..11 "("
      FuncCall@11..23
        Ident@11..19 "numrange"
        Ascii40@19..20 "("
        AConst@20..21
          Iconst@20..21 "4"
        Ascii44@21..22 ","
        AConst@22..23
          Iconst@22..23 "7"
  Ascii41@23..24 ")"
  Ascii41@24..25 ")"
  Ascii59@25..26 ";"

