crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@27.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create temporary view vw_ord as select * from unnest(array[10,20],array['foo','bar'],array[1.0]) as z(a,b,c);"
---
ViewStmt@0..109
  Create@0..6 "create"
  Whitespace@6..7 " "
  Temporary@7..16 "temporary"
  Whitespace@16..17 " "
  View@17..21 "view"
  Whitespace@21..22 " "
  RangeVar@22..28
    Ident@22..28 "vw_ord"
  Whitespace@28..29 " "
  As@29..31 "as"
  Whitespace@31..32 " "
  SelectStmt@32..107
    Select@32..38 "select"
    Whitespace@38..39 " "
    ResTarget@39..40
      ColumnRef@39..40
        AStar@39..40
          Ascii42@39..40 "*"
    Whitespace@40..41 " "
    From@41..45 "from"
    Whitespace@45..46 " "
    RangeFunction@46..107
      List@46..94
        FuncCall@46..94
          Ident@46..52 "unnest"
          Ascii40@52..53 "("
          AArrayExpr@53..64
            Array@53..58 "array"
            Ascii91@58..59 "["
            AConst@59..61
              Iconst@59..61 "10"
            Ascii44@61..62 ","
            AConst@62..64
              Iconst@62..64 "20"
          Ascii93@64..65 "]"
          Ascii44@65..66 ","
          AArrayExpr@66..83
            Array@66..71 "array"
            Ascii91@71..72 "["
            AConst@72..77
              Sconst@72..77 "'foo'"
            Ascii44@77..78 ","
            AConst@78..83
              Sconst@78..83 "'bar'"
          Ascii93@83..84 "]"
          Ascii44@84..85 ","
          AArrayExpr@85..94
            Array@85..90 "array"
            Ascii91@90..91 "["
            AConst@91..94
              Fconst@91..94 "1.0"
      Ascii93@94..95 "]"
      Ascii41@95..96 ")"
      Whitespace@96..97 " "
      Alias@97..107
        As@97..99 "as"
        Whitespace@99..100 " "
        Ident@100..101 "z"
        Ascii40@101..102 "("
        Ident@102..103 "a"
        Ascii44@103..104 ","
        Ident@104..105 "b"
        Ascii44@105..106 ","
        Ident@106..107 "c"
  Ascii41@107..108 ")"
  Ascii59@108..109 ";"

