crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@271.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM rngfunc();
---
SelectStmt@0..24
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..21
    List@14..21
      FuncCall@14..21
        Ident@14..21 "rngfunc"
  Ascii40@21..22 "("
  Ascii41@22..23 ")"
  Ascii59@23..24 ";"

