crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@274.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM rngfunc(3);
---
SelectStmt@0..25
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..23
    List@14..23
      FuncCall@14..23
        Ident@14..21 "rngfunc"
        Ascii40@21..22 "("
        AConst@22..23
          Iconst@22..23 "3"
  Ascii41@23..24 ")"
  Ascii59@24..25 ";"

