crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@277.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM rngfunc() GROUP BY 1;
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..21
    List@14..21
      FuncCall@14..21
        Ident@14..21 "rngfunc"
  Ascii40@21..22 "("
  Ascii41@22..23 ")"
  Whitespace@23..24 " "
  GroupP@24..29 "GROUP"
  Whitespace@29..30 " "
  By@30..32 "BY"
  Whitespace@32..33 " "
  AConst@33..34
    Iconst@33..34 "1"
  Ascii59@34..35 ";"

