crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@280.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create function insert_tt(text) returns int as\n$$ insert into tt(data) values($1) returning f1 $$\nlanguage sql;"
---
CreateFunctionStmt@0..111
  Create@0..6 "create"
  Whitespace@6..7 " "
  Function@7..15 "function"
  Whitespace@15..16 " "
  Ident@16..25 "insert_tt"
  Ascii40@25..26 "("
  FunctionParameter@26..30
    TypeName@26..30
      TextP@26..30 "text"
  Ascii41@30..31 ")"
  Whitespace@31..32 " "
  Returns@32..39 "returns"
  Whitespace@39..40 " "
  TypeName@40..43
    IntP@40..43 "int"
  Whitespace@43..44 " "
  DefElem@44..97
    As@44..46 "as"
    Newline@46..47 "\n"
    List@47..97
      Sconst@47..97 "$$ insert into tt(dat ..."
  Newline@97..98 "\n"
  DefElem@98..110
    Language@98..106 "language"
    Whitespace@106..107 " "
    SqlP@107..110 "sql"
  Ascii59@110..111 ";"

